//
// Protocol buffers definition for Silo server
//
syntax = "proto3";
package pt.tecnico.sauron.silo.grpc;
option java_multiple_files = true;
import "google/protobuf/timestamp.proto";

// type of object
enum TypeObject {
    PERSON = 0;
    CAR = 1;
}

// Operation
message OperationMessage {
    int32 operationId = 1;
    Observation observation = 2;
    CamJoinRequest camera = 3;
}

// observation
message Observation {
    TypeObject type = 1;
    string id = 2;
    google.protobuf.Timestamp date_time = 3;
    string camName = 4;
}

// coordinates
message Coordinates {
    double lat = 1;
    double long = 2;
}

// cam_join
message CamJoinRequest {
    string camName = 1;
    Coordinates coordinates = 2;
}

message CamJoinResponse {
    // No arguments
}

// cam_info
message CamInfoRequest {
    string camName = 1;
}

message CamInfoResponse {
    Coordinates coordinates = 1;
}

// report
message ReportRequest {
    repeated Observation observation = 1;
}

message ReportResponse {
    // No arguments
}

// track
message TrackRequest {
    TypeObject type = 1;
    string id = 2;
}

message TrackResponse {
    Observation observation = 1;
}

// track match
message TrackMatchRequest {
    TypeObject type = 1;
    string partialId = 2;
}

message TrackMatchResponse {
    repeated Observation observation = 1;
}

// trace
message TraceRequest {
    TypeObject type = 1;
    string id = 2;
}

message TraceResponse {
    repeated Observation observation = 1;
}

// ctrl_ping
message CtrlPingRequest {
    string input = 1;
}

message CtrlPingResponse {
    string output = 1;
}

// ctrl_clear
message CtrlClearRequest {
    // No arguments
}

message CtrlClearResponse {
    // No arguments
}

// ctrl_init
message CtrlInitRequest {
    // no arguments
}

message CtrlInitResponse {
    // No arguments
}

// Gossip

// send initial timestamp
message GossipTSRequest {
    int32 instance = 1;
    map<int32, int32> timestamp = 2;
}

message GossipTSResponse {
    int32 instance = 1;
    map<int32, int32> timestamp = 2;
}

// send timestamp to receive updates
message GossipUpdateRequest {
    int32 instance = 1;
    map<int32, int32> timestamp = 2;
    repeated OperationMessage operation = 3;
}

message GossipUpdateResponse {
    int32 instance = 1;
    map<int32, int32> timestamp = 2;
    repeated OperationMessage operation = 3;
}

// service
service Silo {
    rpc CamJoin(CamJoinRequest)             returns (CamJoinResponse);
    rpc CamInfo(CamInfoRequest)             returns (CamInfoResponse);
    rpc Report(ReportRequest)               returns (ReportResponse);
    rpc Track(TrackRequest)                 returns (TrackResponse);
    rpc TrackMatch(TrackMatchRequest)       returns (TrackMatchResponse);
    rpc Trace(TraceRequest)                 returns (TraceResponse);
    rpc CtrlPing(CtrlPingRequest)           returns (CtrlPingResponse);
    rpc CtrlClear(CtrlClearRequest)         returns (CtrlClearResponse);
    rpc CtrlInit(CtrlInitRequest)           returns (CtrlInitResponse);
    rpc GossipTS(GossipTSRequest)           returns (GossipTSResponse);
    rpc GossipUpdate(GossipUpdateRequest)   returns (GossipUpdateResponse);
}